--- a/app/globals.css
+++ b/app/globals.css
@@ -13,19 +13,16 @@ body {
     background: radial-gradient(#282c34, #282c34);
 }
 
-.header-background {
-    position: absolute;
-    width: 100%;
-    height: 320px;
-    top: 0;
-    left: 0;
-    z-index: -1;
+main {
+    text-align: center;
+    margin: 5rem auto;
 }
 
-svg {
-    display: block;
-    width: 100%;
-    height: auto;
+main img {
+    width: 8rem;
+    height: 8rem;
+    object-fit: cover;
+    filter: drop-shadow(0 0 4px #f6c363);
 }
 
 .not-found {
