--- a/app/globals.css
+++ b/app/globals.css
@@ -25,12 +25,14 @@ main img {
     filter: drop-shadow(0 0 4px #f6c363);
 }
 
-.not-found {
+.not-found,
+.error {
     margin-top: 5rem;
     text-align: center;
 }
 
-.not-found h1 {
+.not-found h1,
+.error h1 {
     font-size: 5rem;
     margin: 0px;
     font-weight: 900;
@@ -44,7 +46,8 @@ main img {
     font-family: 'Montserrat', sans-serif;
 }
 
-.not-found p {
+.not-found p,
+.error p {
     font-size: 1.5rem;
     font-weight: 500;
     color: #ddd8d8;
